istio/mtls/peer-authentication-dev.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: dev-strict-mtls
  namespace: dev
spec:
  mtls:
    mode: STRICT
