istio/mtls/destination-rule-staging.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: staging-default-istio-mutual
  namespace: staging
spec:
  host: "*.staging.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
